// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should apply consumer.example.yml 1`] = `
Array [
  Object {
    "params": Object {
      "body": Object {
        "username": "iphone-app",
      },
      "endpoint": Object {
        "name": "consumers",
      },
      "method": "POST",
      "type": "create-customer",
    },
    "type": "request",
    "uri": "http://localhost:8001/consumers",
  },
  Object {
    "content": Object {
      "created_at": "___created_at___",
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "username": "iphone-app",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "username": "iphone-app",
      },
      "endpoint": Object {
        "name": "consumers",
      },
      "method": "POST",
      "type": "create-customer",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/consumers",
  },
  Object {
    "params": Object {
      "body": Object {
        "key": "very-secret-key",
      },
      "endpoint": Object {
        "name": "consumer-credentials",
        "params": Object {
          "consumerId": "2b47ba9b-761a-492d-9a0c-000000000002",
          "plugin": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-customer-credential",
    },
    "type": "request",
    "uri": "http://localhost:8001/consumers/2b47ba9b-761a-492d-9a0c-000000000002/key-auth",
  },
  Object {
    "content": Object {
      "consumer_id": "2b47ba9b-761a-492d-9a0c-000000000002",
      "created_at": "___created_at___",
      "id": "2b47ba9b-761a-492d-9a0c-000000000002",
      "key": "very-secret-key",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "key": "very-secret-key",
      },
      "endpoint": Object {
        "name": "consumer-credentials",
        "params": Object {
          "consumerId": "2b47ba9b-761a-492d-9a0c-000000000002",
          "plugin": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-customer-credential",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/consumers/2b47ba9b-761a-492d-9a0c-000000000002/key-auth",
  },
  Object {
    "params": Object {
      "body": Object {
        "group": "foo-group",
      },
      "endpoint": Object {
        "name": "consumer-acls",
        "params": Object {
          "consumerId": "2b47ba9b-761a-492d-9a0c-000000000003",
        },
      },
      "method": "POST",
      "type": "add-customer-acls",
    },
    "type": "request",
    "uri": "http://localhost:8001/consumers/2b47ba9b-761a-492d-9a0c-000000000003/acls",
  },
  Object {
    "content": Object {
      "consumer_id": "2b47ba9b-761a-492d-9a0c-000000000003",
      "created_at": "___created_at___",
      "group": "foo-group",
      "id": "2b47ba9b-761a-492d-9a0c-000000000003",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "group": "foo-group",
      },
      "endpoint": Object {
        "name": "consumer-acls",
        "params": Object {
          "consumerId": "2b47ba9b-761a-492d-9a0c-000000000003",
        },
      },
      "method": "POST",
      "type": "add-customer-acls",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/consumers/2b47ba9b-761a-492d-9a0c-000000000003/acls",
  },
]
`;

exports[`should apply consumer.example.yml 2`] = `
Object {
  "apis": Array [],
  "consumers": Array [
    Object {
      "_info": Object {
        "created_at": "___created_at___",
        "id": "2b47ba9b-761a-492d-9a0c-000000000004",
      },
      "acls": Array [
        Object {
          "_info": Object {
            "consumer_id": "2b47ba9b-761a-492d-9a0c-000000000004",
            "created_at": "___created_at___",
            "id": "2b47ba9b-761a-492d-9a0c-000000000004",
          },
          "group": "foo-group",
        },
      ],
      "credentials": Array [
        Object {
          "_info": Object {
            "consumer_id": "2b47ba9b-761a-492d-9a0c-000000000004",
            "created_at": "___created_at___",
            "id": "2b47ba9b-761a-492d-9a0c-000000000004",
          },
          "attributes": Object {
            "key": "very-secret-key",
          },
          "name": "key-auth",
        },
      ],
      "username": "iphone-app",
    },
  ],
  "plugins": Array [],
}
`;

exports[`should apply global-plugin.example.yml 1`] = `
Array [
  Object {
    "params": Object {
      "body": Object {
        "config": Object {
          "credentials": false,
          "max_age": 7000,
          "preflight_continue": false,
        },
        "name": "cors",
      },
      "endpoint": Object {
        "name": "plugins",
        "params": Object {
          "pluginName": "cors",
        },
      },
      "method": "POST",
      "type": "add-global-plugin",
    },
    "type": "request",
    "uri": "http://localhost:8001/plugins",
  },
  Object {
    "content": Object {
      "config": Object {
        "credentials": false,
        "max_age": 7000,
        "preflight_continue": false,
      },
      "created_at": "___created_at___",
      "enabled": true,
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "name": "cors",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "config": Object {
          "credentials": false,
          "max_age": 7000,
          "preflight_continue": false,
        },
        "name": "cors",
      },
      "endpoint": Object {
        "name": "plugins",
        "params": Object {
          "pluginName": "cors",
        },
      },
      "method": "POST",
      "type": "add-global-plugin",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/plugins",
  },
]
`;

exports[`should apply global-plugin.example.yml 2`] = `
Object {
  "apis": Array [],
  "consumers": Array [],
  "plugins": Array [
    Object {
      "_info": Object {
        "created_at": "___created_at___",
        "id": "2b47ba9b-761a-492d-9a0c-000000000002",
      },
      "attributes": Object {
        "config": Object {
          "credentials": false,
          "max_age": 7000,
          "preflight_continue": false,
        },
        "enabled": true,
      },
      "name": "cors",
    },
  ],
}
`;

exports[`should apply key-auth.example.yml 1`] = `
Array [
  Object {
    "params": Object {
      "body": Object {
        "username": "iphone-app",
      },
      "endpoint": Object {
        "name": "consumers",
      },
      "method": "POST",
      "type": "create-customer",
    },
    "type": "request",
    "uri": "http://localhost:8001/consumers",
  },
  Object {
    "content": Object {
      "created_at": "___created_at___",
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "username": "iphone-app",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "username": "iphone-app",
      },
      "endpoint": Object {
        "name": "consumers",
      },
      "method": "POST",
      "type": "create-customer",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/consumers",
  },
  Object {
    "params": Object {
      "body": Object {
        "key": "very-secret-key",
      },
      "endpoint": Object {
        "name": "consumer-credentials",
        "params": Object {
          "consumerId": "2b47ba9b-761a-492d-9a0c-000000000002",
          "plugin": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-customer-credential",
    },
    "type": "request",
    "uri": "http://localhost:8001/consumers/2b47ba9b-761a-492d-9a0c-000000000002/key-auth",
  },
  Object {
    "content": Object {
      "consumer_id": "2b47ba9b-761a-492d-9a0c-000000000002",
      "created_at": "___created_at___",
      "id": "2b47ba9b-761a-492d-9a0c-000000000002",
      "key": "very-secret-key",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "key": "very-secret-key",
      },
      "endpoint": Object {
        "name": "consumer-credentials",
        "params": Object {
          "consumerId": "2b47ba9b-761a-492d-9a0c-000000000002",
          "plugin": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-customer-credential",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/consumers/2b47ba9b-761a-492d-9a0c-000000000002/key-auth",
  },
  Object {
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "content": Object {
      "created_at": "___created_at___",
      "hosts": Array [
        "mockbin.com",
      ],
      "http_if_terminated": true,
      "https_only": false,
      "id": "2b47ba9b-761a-492d-9a0c-000000000003",
      "name": "mockbin",
      "preserve_host": false,
      "retries": 5,
      "strip_uri": true,
      "upstream_connect_timeout": 60000,
      "upstream_read_timeout": 60000,
      "upstream_send_timeout": 60000,
      "upstream_url": "http://mockbin.com",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "params": Object {
      "body": Object {
        "config": Object {
          "key_names": Array [
            "very-secret-key",
          ],
        },
        "name": "key-auth",
      },
      "endpoint": Object {
        "name": "api-plugins",
        "params": Object {
          "apiId": "2b47ba9b-761a-492d-9a0c-000000000004",
          "pluginName": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-api-plugin",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis/2b47ba9b-761a-492d-9a0c-000000000004/plugins",
  },
  Object {
    "content": Object {
      "api_id": "2b47ba9b-761a-492d-9a0c-000000000004",
      "config": Object {
        "anonymous": "",
        "hide_credentials": false,
        "key_in_body": false,
        "key_names": Array [
          "very-secret-key",
        ],
      },
      "created_at": "___created_at___",
      "enabled": true,
      "id": "2b47ba9b-761a-492d-9a0c-000000000004",
      "name": "key-auth",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "config": Object {
          "key_names": Array [
            "very-secret-key",
          ],
        },
        "name": "key-auth",
      },
      "endpoint": Object {
        "name": "api-plugins",
        "params": Object {
          "apiId": "2b47ba9b-761a-492d-9a0c-000000000004",
          "pluginName": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-api-plugin",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/apis/2b47ba9b-761a-492d-9a0c-000000000004/plugins",
  },
]
`;

exports[`should apply key-auth.example.yml 2`] = `
Object {
  "apis": Array [
    Object {
      "_info": Object {
        "created_at": "___created_at___",
        "id": "2b47ba9b-761a-492d-9a0c-000000000005",
      },
      "attributes": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "http_if_terminated": true,
        "https_only": false,
        "preserve_host": false,
        "retries": 5,
        "strip_uri": true,
        "upstream_connect_timeout": 60000,
        "upstream_read_timeout": 60000,
        "upstream_send_timeout": 60000,
        "upstream_url": "http://mockbin.com",
      },
      "name": "mockbin",
      "plugins": Array [
        Object {
          "_info": Object {
            "created_at": "___created_at___",
            "id": "2b47ba9b-761a-492d-9a0c-000000000005",
          },
          "attributes": Object {
            "config": Object {
              "anonymous": "",
              "hide_credentials": false,
              "key_in_body": false,
              "key_names": Array [
                "very-secret-key",
              ],
            },
            "enabled": true,
          },
          "name": "key-auth",
        },
      ],
    },
  ],
  "consumers": Array [
    Object {
      "_info": Object {
        "created_at": "___created_at___",
        "id": "2b47ba9b-761a-492d-9a0c-000000000005",
      },
      "acls": Array [],
      "credentials": Array [
        Object {
          "_info": Object {
            "consumer_id": "2b47ba9b-761a-492d-9a0c-000000000005",
            "created_at": "___created_at___",
            "id": "2b47ba9b-761a-492d-9a0c-000000000005",
          },
          "attributes": Object {
            "key": "very-secret-key",
          },
          "name": "key-auth",
        },
      ],
      "username": "iphone-app",
    },
  ],
  "plugins": Array [],
}
`;

exports[`should apply simple-api.example.yml 1`] = `
Array [
  Object {
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "content": Object {
      "created_at": "___created_at___",
      "hosts": Array [
        "mockbin.com",
      ],
      "http_if_terminated": true,
      "https_only": false,
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "name": "mockbin",
      "preserve_host": false,
      "retries": 5,
      "strip_uri": true,
      "upstream_connect_timeout": 60000,
      "upstream_read_timeout": 60000,
      "upstream_send_timeout": 60000,
      "upstream_url": "http://mockbin.com",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/apis",
  },
]
`;

exports[`should apply simple-api.example.yml 2`] = `
Object {
  "apis": Array [
    Object {
      "_info": Object {
        "created_at": "___created_at___",
        "id": "2b47ba9b-761a-492d-9a0c-000000000002",
      },
      "attributes": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "http_if_terminated": true,
        "https_only": false,
        "preserve_host": false,
        "retries": 5,
        "strip_uri": true,
        "upstream_connect_timeout": 60000,
        "upstream_read_timeout": 60000,
        "upstream_send_timeout": 60000,
        "upstream_url": "http://mockbin.com",
      },
      "name": "mockbin",
      "plugins": Array [],
    },
  ],
  "consumers": Array [],
  "plugins": Array [],
}
`;
